@@ -3,3 +3,4 @@ target
 build.properties
 *.log
 .clover
+*.keystore
